--- a/PalEats/PalEats/Views/CategoryPage.xaml
+++ b/PalEats/PalEats/Views/CategoryPage.xaml
@@ -2,23 +2,19 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:PalEats.ViewModels"
-             x:Class="PalEats.Views.CategoryPage"
-             NavigationPage.HasNavigationBar="False"               
+             x:Class="PalEats.Views.CategoryPage"              
              xmlns:components="clr-namespace:PalEats.Views">
+    <NavigationPage.TitleView>
+        <Label Text="Paleats" FontSize="Large" TextColor="{StaticResource MainTextColor}"></Label>
+    </NavigationPage.TitleView>
 
     <ContentPage.BindingContext>
         <local:CategoryPageViewModel/>
     </ContentPage.BindingContext>
-
+  
     <ContentPage.Content>
         <StackLayout BackgroundColor="{StaticResource backgroundColor }">
-            <StackLayout>
-                <StackLayout  HeightRequest="119" WidthRequest="360">
-                    <Frame  BackgroundColor="{StaticResource MainHeadandNavbarColor}" Padding="10" CornerRadius="7" WidthRequest="400" HeightRequest="80">
-                        <Label Text="PalEats" Padding="15" HorizontalOptions="StartAndExpand" FontSize="30"  TextColor="{StaticResource MainTextColor}" />
-                    </Frame>
-                </StackLayout>
-            </StackLayout>
+           
             <StackLayout Padding="15" Margin="0,30,0,0">
 
                 <CollectionView ItemsSource="{Binding Categories}" SelectionMode="Single" SelectionChanged="OnCollectionViewSelectionChanged">
