--- a/PalEats/PalEats/Views/FavoritePage.xaml
+++ b/PalEats/PalEats/Views/FavoritePage.xaml
@@ -1,23 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PalEats.Views.FavoritePage" NavigationPage.HasNavigationBar="False"              
+             x:Class="PalEats.Views.FavoritePage"              
              xmlns:components="clr-namespace:PalEats.Views" >
-
+    <NavigationPage.TitleView>
+        <Label Text="Favorite" FontSize="Large" TextColor="{StaticResource MainTextColor}"></Label>
+    </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout  BackgroundColor="{StaticResource backgroundColor}">
-            <StackLayout HeightRequest="119" WidthRequest="360">
-                <Frame BackgroundColor="{StaticResource MainHeadandNavbarColor}" Padding="10" CornerRadius="7" HorizontalOptions="Start" VerticalOptions="Start" WidthRequest="400" HeightRequest="80">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <ImageButton Grid.Column="0" Source="arrow.png" WidthRequest="10" HeightRequest="24" BackgroundColor="{StaticResource MainHeadandNavbarColor}" HorizontalOptions="StartAndExpand" Clicked="BackButton_Clicked"/>
-                        <Label Grid.Column="1" Text="Favorite" HorizontalOptions="StartAndExpand" Padding="20" FontSize="30" TextColor="{StaticResource MainTextColor}" />
-                    </Grid>
-                </Frame>
-            </StackLayout>
+            
             <StackLayout Padding="15" Margin="0,30,0,0">
 
                 <CollectionView ItemsSource="{Binding FavoriteDishes}" SelectionMode="Single" SelectionChanged="OnCollectionViewSelectionChanged">
