--- a/PalEats/PalEats/Views/RecipePage.xaml
+++ b/PalEats/PalEats/Views/RecipePage.xaml
@@ -60,18 +60,18 @@
                                 </CollectionView.ItemTemplate>
                             </CollectionView>
                         </StackLayout>
-                        <StackLayout>
-                            <Label FontSize="20" TextColor="{StaticResource MainTextColor}" FontAttributes="Bold" Text="Preparation: " Margin="5,0,0,0" />
-                            <CollectionView ItemsSource="{Binding Preparation}"  Margin="10,0,0,0"  >
-                                <CollectionView.ItemTemplate>
-                                    <DataTemplate>
-                                        <StackLayout >
-                                            <Label Text="{Binding}" Margin="0,0,0,5" TextColor="{StaticResource MainTextColor}" FontSize="16" />
-                                        </StackLayout>
-                                    </DataTemplate>
-                                </CollectionView.ItemTemplate>
-                            </CollectionView>
+                        <Label FontSize="20" TextColor="{StaticResource MainTextColor}" FontAttributes="Bold" Text="Preparation: " Margin="5,0,0,0" />
+                        
+                        <StackLayout BindableLayout.ItemsSource="{Binding Preparation}" Margin="0,0,0,50">
+                            <BindableLayout.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout HorizontalOptions="Fill" VerticalOptions="Fill" Margin="10,0,0,0" >
+                                        <Label Text="{Binding}" Margin="0,0,0,5" TextColor="{StaticResource MainTextColor}" FontSize="16" />
+                                    </StackLayout>
+                                </DataTemplate>
+                            </BindableLayout.ItemTemplate>
                         </StackLayout>
+                        
                     </StackLayout>
                 </StackLayout>
             </ScrollView >
