create static font family

--- a/PalEats/PalEats/App.xaml
+++ b/PalEats/PalEats/App.xaml
@@ -18,7 +18,22 @@
                 <Setter Property="BarBackgroundColor" Value="#FBD6BC" />
             </Style>
 
-         
+            <Style TargetType="Label">
+                <Setter Property="FontFamily" Value="Lato-Black" />
+            </Style>
+            
+            <Style TargetType="Frame">
+                <Setter Property="Content">
+                    <Setter.Value>
+                        <Label FontFamily="Lato-Black" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            
+           
+
+            
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
