--- a/PalEats/PalEats/Views/SearchPage.xaml
+++ b/PalEats/PalEats/Views/SearchPage.xaml
@@ -15,7 +15,7 @@
             <StackLayout>
                 <SearchBar Placeholder="Search"
                        Text="{Binding SearchText}"
-                           
+                           FontFamily="Lato-Black"
                        SearchCommand="{Binding SearchCommand}"
                        SearchCommandParameter="{Binding SearchText}"/>
 
