--- a/PalEats/PalEats/Views/SignUpPage.xaml
+++ b/PalEats/PalEats/Views/SignUpPage.xaml
@@ -23,8 +23,7 @@
                FontSize="40"
                HorizontalOptions="Center"
                TextColor="{StaticResource MainTextColor}"
-               FontFamily="Lato"
-               />
+               FontFamily="Lato-Black"               />
 
         <Frame CornerRadius="20"
                BackgroundColor="{StaticResource FrameBackgroundColor}"
@@ -33,6 +32,7 @@
                HasShadow="True">
             <Entry Text="{Binding SignUpModel.Email}" 
                    Placeholder="Email" 
+                   FontFamily="Lato-Black"
                    FontSize="Small" />
         </Frame>
 
@@ -44,6 +44,7 @@
             <Entry Text="{Binding SignUpModel.Password}" 
                    Placeholder="Password" 
                    IsPassword="True" 
+                   FontFamily="Lato-Black"
                    FontSize="Small" />
         </Frame>
 
@@ -55,6 +56,7 @@
             <Entry Text="{Binding ConfirmPassword}" 
                    Placeholder="Confirm Password" 
                    FontSize="Small"
+                   FontFamily="Lato-Black"
                    IsPassword="True" />
         </Frame>
 
@@ -90,7 +92,6 @@
 
         <Label Text="Already have an account? Sign in"
            HorizontalTextAlignment="Center"
-           FontFamily="Lato"
            TextColor="{StaticResource MainTextColor}"
            Margin="0,20,0,32">
             <Label.FormattedText>
