--- a/PalEats/PalEats/Views/CategoryPage.xaml
+++ b/PalEats/PalEats/Views/CategoryPage.xaml
@@ -35,14 +35,13 @@
                                    RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"
                                    
                                    />
+                                    <Frame BackgroundColor="DarkGray"
+                                    Opacity="0.4"
+                                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
+                                    RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}" />
 
-                                    <Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
-                                      RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"
-                                      >
-                                        <Frame HeightRequest="60" VerticalOptions="End" BackgroundColor="#F9EFE3" Opacity="0.6" CornerRadius="20">
-                                            <Label Text="{Binding CategoryName}" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center" TextColor="#543214" FontSize="Large"/>
-                                        </Frame>
-                                    </Grid>
+                                    <Label Text="{Binding CategoryName}" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}" TextColor="White" FontSize="Large"/>
+                                        
 
                                 </RelativeLayout>
                             </Frame>
