--- a/PalEats/PalEats/Views/FavoritePage.xaml
+++ b/PalEats/PalEats/Views/FavoritePage.xaml
@@ -18,7 +18,7 @@
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Frame IsClippedToBounds="True" Padding="0" HeightRequest="270" CornerRadius="20">
+                            <Frame IsClippedToBounds="True" Padding="0" HeightRequest="180" CornerRadius="20">
                                 <RelativeLayout>
                                     <Image Source="{Binding DishImgUrl}" 
                                    Aspect="AspectFill"
@@ -26,14 +26,9 @@
                                    RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"
                                    
                                    />
-
-                                    <Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
-                                      RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"
-                                      >
-                                        <Frame HeightRequest="60" VerticalOptions="End" BackgroundColor="#F9EFE3" Opacity="0.6" CornerRadius="20">
-                                            <Label Text="{Binding DishName}" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center" TextColor="#543214" FontSize="Large"/>
-                                        </Frame>
-                                    </Grid>
+                                    <Frame BackgroundColor="DarkGray" Opacity="0.4" CornerRadius="20" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"   RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}" />
+                                    <Label Text="{Binding DishName}" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}" TextColor="White" FontSize="Large"/>
+                                       
 
                                 </RelativeLayout>
                             </Frame>
