--- a/PalEats/PalEats/Views/NavigationComponent.xaml
+++ b/PalEats/PalEats/Views/NavigationComponent.xaml
@@ -4,8 +4,8 @@
              x:Class="PalEats.Views.NavigationComponent">
 
     <StackLayout Orientation="Horizontal" BackgroundColor="{StaticResource MainHeadandNavbarColor}" Spacing="70" Margin="-7" HeightRequest="50" Padding="80,0,90,0">
-        <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}"   Source="search.png"  Clicked="Button_Clicked" Aspect="AspectFit" WidthRequest="30" HeightRequest="26"  />
-        <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}" Source="home.png" Aspect="AspectFit"  WidthRequest="30" HeightRequest="26"  Clicked="Button_Clicked_1" />
-        <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}" Source="fav.png" Aspect="AspectFit" WidthRequest="28.67" HeightRequest="26"  Clicked="Button_Clicked_2"   />
+        <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}"   Source="search.png"  Clicked="Button_search_Clicked" Aspect="AspectFit" WidthRequest="30" HeightRequest="26"  />
+        <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}" Source="home.png" Aspect="AspectFit"  WidthRequest="30" HeightRequest="26"  Clicked="Button_Home_Clicked" />
+        <ImageButton  BackgroundColor="{StaticResource MainHeadandNavbarColor}" Source="fav.png" Aspect="AspectFit" WidthRequest="28.67" HeightRequest="26"  Clicked="Button_favorite_Clicked"   />
     </StackLayout>
 </ContentView>
