--- a/PalEats/PalEats/Views/RecipePage.xaml
+++ b/PalEats/PalEats/Views/RecipePage.xaml
@@ -12,7 +12,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <ScrollView>
+            <ScrollView >
                 <StackLayout BackgroundColor="{StaticResource backgroundColor}" >
                     <Grid BackgroundColor="{StaticResource RecipeHeaderColor}">
                         <Image Source="{Binding Recipe.DishImgUrl }" Aspect="AspectFill" HeightRequest="300"/>
@@ -48,7 +48,7 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <ImageButton Source="shoppingbasket.png" BackgroundColor="{StaticResource backgroundColor}" VerticalOptions="Start" Aspect="AspectFit" HeightRequest="40" Grid.Column="0"  Clicked="Shopping_Button" />
+                                <ImageButton Source="shoppingbasket.png" BackgroundColor="{StaticResource backgroundColor}" VerticalOptions="Start" Aspect="AspectFit" HeightRequest="40" Grid.Column="0"  Clicked="AddToShoppingListButtonClicked" />
                                 <Label FontSize="20" FontAttributes="Bold" Text="Ingredients:" Margin="10,10,0,0" TextColor="{StaticResource MainTextColor}" Grid.Column="1" />
                                 <Label Text="{Binding NumberOfPeople}" FontSize="16" Margin="0,10,10,0" TextColor="{StaticResource MainTextColor}" Grid.Column="1" Grid.Row="0" HorizontalOptions="End" />
                             </Grid>
@@ -56,7 +56,16 @@
                             <CollectionView ItemsSource="{Binding Ingredients}"  HeightRequest="{Binding IngredientsHeight}"  Margin="10,0,0,0">
                                 <CollectionView.ItemTemplate>
                                     <DataTemplate>
-                                        <Label Text="{Binding Description}" Margin="0,0,0,5" TextColor="{StaticResource MainTextColor}" FontSize="16"  />
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                            </Grid.ColumnDefinitions>
+                                            <Label Grid.Column="0" Text="{Binding Amount}" Margin="0,0,0,5" TextColor="{StaticResource MainTextColor}" FontSize="16"  />
+                                            <Label Grid.Column="1" Text="{Binding Unit}" Margin="0,0,0,5" TextColor="{StaticResource MainTextColor}" FontSize="16"  />
+                                            <Label Grid.Column="2" Text="{Binding Name}" Margin="0,0,0,5" TextColor="{StaticResource MainTextColor}" FontSize="16"  />
+                                        </Grid>
                                     </DataTemplate>
                                 </CollectionView.ItemTemplate>
                             </CollectionView>
