--- a/PalEats/PalEats/Views/CategoryPage.xaml
+++ b/PalEats/PalEats/Views/CategoryPage.xaml
@@ -5,26 +5,22 @@
              x:Class="PalEats.Views.CategoryPage"              
              xmlns:components="clr-namespace:PalEats.Views"
              xmlns:c="clr-namespace:PalEats.Views"
-             IsPresented="{Binding ShowFlyoutMenu, Mode=TwoWay}"
-
-    Title="PalEats" >
+             IsPresented="{Binding ShowFlyoutMenu}"
+             Title="PalEats" >
 
     <FlyoutPage.Flyout>
         <c:FlyoutMenuPage x:Name="flyout"/>
     </FlyoutPage.Flyout>
-
     <FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
                 <ContentPage>
-
-
                     <ContentPage.BindingContext>
                         <local:CategoryPageViewModel/>
                     </ContentPage.BindingContext>
 
                     <ContentPage.Content>
-                        <StackLayout BackgroundColor="{StaticResource backgroundColor }">
+                        <StackLayout BackgroundColor="{StaticResource BackgroundColor }">
                             <StackLayout Orientation="Horizontal" Margin="0,15,0,0">
                                 <BoxView HorizontalOptions="Start" VerticalOptions="Center" HeightRequest="1" WidthRequest="40" Color="{StaticResource MainTextColor}"/>
                                 <Label Text="Discover &#x0a;Palestinian Recipes" FontSize="Title" TextColor="{StaticResource MainTextColor}" FontAttributes="Bold"/>
