--- a/PalEats/PalEats/Views/RecipePage.xaml
+++ b/PalEats/PalEats/Views/RecipePage.xaml
@@ -13,27 +13,27 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <ScrollView >
-                <StackLayout BackgroundColor="{StaticResource backgroundColor}" >
+                <StackLayout BackgroundColor="{StaticResource BackgroundColor}" >
                     <Grid BackgroundColor="{StaticResource RecipeHeaderColor}">
                         <Image Source="{Binding Recipe.DishImgUrl }" Aspect="AspectFill" HeightRequest="300"/>
                     </Grid>
                     <StackLayout  Padding="0,15,0,0"  >
                         <StackLayout Orientation="Horizontal"  Spacing="30" HeightRequest="63" WidthRequest="277" Margin="50,0,50,0">
                             <StackLayout Orientation="Vertical" Spacing="5">
-                                <Image BackgroundColor="{StaticResource backgroundColor}"  Source="clock.png" Aspect="AspectFit" WidthRequest="40" HeightRequest="40"/>
+                                <Image BackgroundColor="{StaticResource BackgroundColor}"  Source="clock.png" Aspect="AspectFit" WidthRequest="40" HeightRequest="40"/>
                                 <Label Text="{Binding Recipe.DueTime}"  FontSize="Small" HorizontalTextAlignment="Center"/>
                             </StackLayout>
                             <StackLayout Orientation="Vertical" Spacing="5">
-                                <Image BackgroundColor="{StaticResource backgroundColor}"   Source="fire.png" Aspect="AspectFit" HeightRequest="40" WidthRequest="50"/>
+                                <Image BackgroundColor="{StaticResource BackgroundColor}"   Source="fire.png" Aspect="AspectFit" HeightRequest="40" WidthRequest="50"/>
                                 <Label Text="{Binding Recipe.Calories}"  FontSize="Small" HorizontalTextAlignment="Center"/>
                             </StackLayout>
                             <StackLayout Orientation="Vertical" Spacing="5" >
-                                <ImageButton BackgroundColor="{StaticResource backgroundColor}" Command="{Binding FavoriteButtonClicked}" Source="{Binding FavoritePath}" Aspect="AspectFit" HeightRequest="40" WidthRequest="40" />
+                                <ImageButton BackgroundColor="{StaticResource BackgroundColor}" Command="{Binding FavoriteButtonClicked}" Source="{Binding FavoritePath}" Aspect="AspectFit" HeightRequest="40" WidthRequest="40" />
                                 <Label  Text="Favorite" FontSize="Small" HorizontalTextAlignment="Center"/>
 
                             </StackLayout>
                             <StackLayout Orientation="Vertical" Spacing="5" >
-                                <ImageButton BackgroundColor="{StaticResource backgroundColor}" Clicked="ShareButton_Clicked"  Source="share.png" Aspect="AspectFit" WidthRequest="28.67" HeightRequest="40" />
+                                <ImageButton BackgroundColor="{StaticResource BackgroundColor}" Clicked="ShareButton_Clicked"  Source="share.png" Aspect="AspectFit" WidthRequest="28.67" HeightRequest="40" />
                                 <Label Text="Share " FontSize="Small" HorizontalTextAlignment="Center"/>
                             </StackLayout>
                         </StackLayout>
@@ -48,7 +48,7 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <ImageButton Source="shoppingbasket.png" BackgroundColor="{StaticResource backgroundColor}" VerticalOptions="Start" Aspect="AspectFit" HeightRequest="40" Grid.Column="0"  Clicked="AddToShoppingListButtonClicked" />
+                                <ImageButton Source="shoppingbasket.png" BackgroundColor="{StaticResource BackgroundColor}" VerticalOptions="Start" Aspect="AspectFit" HeightRequest="40" Grid.Column="0"  Clicked="AddToShoppingListButtonClicked" />
                                 <Label FontSize="20" FontAttributes="Bold" Text="Ingredients:" Margin="10,10,0,0" TextColor="{StaticResource MainTextColor}" Grid.Column="1" />
                                 <Label Text="{Binding NumberOfPeople}" FontSize="16" Margin="0,10,10,0" TextColor="{StaticResource MainTextColor}" Grid.Column="1" Grid.Row="0" HorizontalOptions="End" />
                             </Grid>
