--- a/PalEats/PalEats/Views/FavoritePage.xaml
+++ b/PalEats/PalEats/Views/FavoritePage.xaml
@@ -7,7 +7,7 @@
         <Label  Text="Favorite" FontSize="Large" TextColor="{StaticResource MainTextColor}"></Label>
     </NavigationPage.TitleView>
     <ContentPage.Content>
-        <StackLayout  BackgroundColor="{StaticResource BackgroundColor}">
+        <StackLayout  BackgroundColor="{StaticResource backgroundColor}">
             
             <StackLayout Padding="15" Margin="0,30,0,0">
 
