--- a/PalEats/PalEats/Views/ShoppingListModal.xaml
+++ b/PalEats/PalEats/Views/ShoppingListModal.xaml
@@ -8,7 +8,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="{StaticResource BackgroundColor}">
+        <StackLayout BackgroundColor="{StaticResource backgroundColor}">
             <Label Padding="30,30,30,0"  FontSize="Medium" TextColor="{StaticResource MainTextColor}" Text="Add To Your Shopping List : " HorizontalOptions="Center"/>
             <CollectionView ItemsSource="{Binding Ingredients}" Margin="20,20,0,0"  HeightRequest="{Binding IngredientsHeight}">
                 <CollectionView.ItemTemplate>
